--- a/WongWang2006 Reduced Two Variable Model without AMPA - A Network Mechanism.ipynb
+++ b/WongWang2006 Reduced Two Variable Model without AMPA - A Network Mechanism.ipynb
@@ -80,6 +80,8 @@
         "import math  # math functions\n",
         "import sys\n",
         "\n",
+        "sdfghjkl\n",
+        "\n",
         "# THIS IS FOR PLOTTING\n",
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt # side-stepping mpl backend\n",
