--- a/WongWang2006 Reduced Two Variable Model without AMPA - A Network Mechanism.ipynb
+++ b/WongWang2006 Reduced Two Variable Model without AMPA - A Network Mechanism.ipynb
@@ -80,7 +80,7 @@
         "import math  # math functions\n",
         "import sys\n",
         "\n",
-        "sdfghjkl\n",
+        "sdfghjkl uihlkh oij\n",
         "\n",
         "# THIS IS FOR PLOTTING\n",
         "%matplotlib inline\n",
