Revert "Created using Colaboratory test4"
This reverts commit d817b3a0388b288f419e55ae66b440b12b93f89e.

--- a/WongWang2006 Reduced Two Variable Model without AMPA - A Network Mechanism.ipynb
+++ b/WongWang2006 Reduced Two Variable Model without AMPA - A Network Mechanism.ipynb
@@ -80,7 +80,7 @@
         "import math  # math functions\n",
         "import sys\n",
         "\n",
-        "sdfghjkl uihlkh oij\n",
+        "sdfghjkl\n",
         "\n",
         "# THIS IS FOR PLOTTING\n",
         "%matplotlib inline\n",
