--- a/MULTISENSORY/A Network Mechanism of Perceptual Decision Time Heading Experiment.ipynb
+++ b/MULTISENSORY/A Network Mechanism of Perceptual Decision Time Heading Experiment.ipynb
@@ -194,7 +194,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Heading= -10.00 , n= 0\n"
+      "Heading= -10.00 , n= 0\n",
+      "Heading= -10.00 , n= 500\n",
+      "Heading= -5.00 , n= 0\n"
      ]
     }
    ],
