--- a/MULTISENSORY/Visual Vestibular Heading impact of Tau.ipynb
+++ b/MULTISENSORY/Visual Vestibular Heading impact of Tau.ipynb
@@ -148,12 +148,7 @@
     "    #tau_S=.10 #s\n",
     "    k=(-S/tau_VEST+(1-S)*gamma*H(x)/1)\n",
     "    S_new=S+h*(-(S+h/2*k)/tau_VEST+(1-S+h/2*k)*gamma*H(x))\n",
-    "    return S_new\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    return S_new"
    ]
   },
   {
@@ -539,7 +534,7 @@
     "\n",
     "plt.legend()\n",
     "plt.ylim(0,1700)\n",
-    "plt.xlabel('Coherence')\n",
+    "plt.xlabel('Tau Vest')\n",
     "plt.ylabel('Reaction Time')\n",
     "plt.savefig('Behavioural.png', bbox_inches='tight',dpi=300)\n",
     "plt.show()"
