working out huangs method

--- a/MULTISENSORY/Vestibular Heading Experiment Simulation.ipynb
+++ b/MULTISENSORY/Vestibular Heading Experiment Simulation.ipynb
@@ -47,7 +47,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Reduced Network Model"
+    "### The Reduced Network Model\n",
+    "#### Firing rate\n",
+    "$$ H_i=\\frac{a x_i-b}{(1-exp[-d(ax_i-b)]}$$\n",
+    "\n",
+    "#### Parameter values\n",
+    "$$ a=207 (VnC)^{-1}; \\:\\:  b=108Hz; \\:\\:d=0.154s$$"
    ]
   },
   {
@@ -100,12 +105,16 @@
    "metadata": {},
    "source": [
     "### Background activity\n",
-    "$$ \\tau_{AMPA}\\frac{d I_{noise,i}(t)}{dt} =-I_{noise,i}(t)+\\eta_i(t)\\sqrt{\\tau_{AMPA}}\\sigma_{noise}$$"
+    "$$ \\tau_{AMPA}\\frac{d I_{noise,i}(t)}{dt} =-I_{noise,i}(t)+\\eta_i(t)\\sqrt{\\tau_{AMPA}}\\sigma_{noise}$$  \n",
+    "#### Parameter values\n",
+    "$$ \\tau_{AMPA}=2ms; \\:\\: \\sigma_{noise}=0.02nA; \\:\\:\\eta- Gaussian \\ white \\ noise  $$\n",
+    "#### Background activity is approximated in the code below using Euler's method (when k=0)\n",
+    "$$ I_{noise,i+1}=I_{noise,i}+\\frac{h}{\\tau_{AMPA}}(-I_{noise,i}+\\eta_i\\sqrt{\\tau_{AMPA}}\\sigma)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,10 +122,8 @@
     "    h=0.1\n",
     "    sigma_noise=0.02 # nA\n",
     "    tau_AMPA=2 #ms\n",
-    "    eta_noise=np.random.normal(0,1,1)\n",
-    "    k=0#(-(I_noise)+eta_noise*np.sqrt(tau_AMPA)*sigma_noise)\n",
-    "    I_noise_new=I_noise+h/tau_AMPA*(-(I_noise+h/2*k)+eta_noise\n",
-    "                                *np.sqrt(tau_AMPA)*sigma_noise)\n",
+    "    eta_noise=np.random.normal(0,1,1) #Gaussian white noise\n",
+    "    I_noise_new=I_noise+h/tau_AMPA*(-I_noise+eta_noise*np.sqrt(tau_AMPA)*sigma_noise) #numerical approximation\n",
     "    return I_noise_new"
    ]
   },
@@ -125,7 +132,17 @@
    "metadata": {},
    "source": [
     "### Network Dynamics\n",
-    "$$ \\frac{d S_{i}}{dt} =-\\frac{S_{i}}{\\tau_S}+(1-S_{i})\\gamma H_{i}$$"
+    "### Network Dynamics\n",
+    "$$ \\frac{d S_{i}}{dt} =-\\frac{S_{i}}{\\tau_S}+(1-S_{i})\\gamma H_{i}$$\n",
+    "\n",
+    "#### Parameter values\n",
+    "$$\\tau_S=0.1s;  \\gamma=0.641$$\n",
+    "\n",
+    "#### Approximated below using Heun's method: \n",
+    "Heun's Method: $y_{i+1} = y_{i} + \\frac{h}{2}(f(y_i) + f(y_i + hf(y_i)))$\n",
+    "\n",
+    "$$k=h(-\\frac{S}{\\tau_S}+(1-S)\\gamma H(x)$$\n",
+    "$$S_{new}=S_i+h(-\\frac{S+\\frac{k_1}{2}}{\\tau_S}+(1-S+\\frac{k}{2})\\gamma H(x)$$"
    ]
   },
   {
@@ -138,7 +155,7 @@
     "    h=0.1/1000 #ms\n",
     "    gamma=0.641\n",
     "    tau_S=.1#100 #s\n",
-    "    k=(-S/tau_S+(1-S)*gamma*H(x)/1)\n",
+    "    k=(-S/tau_S+(1-S)*gamma*H(x))\n",
     "    S_new=S+h*(-(S+h/2*k)/tau_S+(1-S+h/2*k)*gamma*H(x))\n",
     "    return S_new"
    ]
