Update Vestibular Heading Experiment Simulation.ipynb

--- a/MULTISENSORY/Vestibular Heading Experiment Simulation.ipynb
+++ b/MULTISENSORY/Vestibular Heading Experiment Simulation.ipynb
@@ -13,14 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelling Heading Perception in a Vestibular Discimination experiment using a Recurent N"
+    "## Modelling Heading Perception in a Vestibular Discimination Experiment using a Recurent Network Mechanism"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sensory information regarding self-motion through an environment is gathered by the vestibular system. Here we model how neural circuits tuned to differing heading directions facilitate the decision-making process wherin one recognises the leftward or rightward direction of their self-motion. This study builds upon the modelling work of Wang (2006) and the experimental results of Butler (2010). "
+    "Sensory information regarding self-motion through an environment is gathered by the vestibular system. Here we model how neural circuits, tuned to differing heading directions, facilitate the decision-making process wherin one recognises the leftward or rightward direction of their self-motion. This study builds upon the modelling work of Wang (2006) and the experimental results of Butler (2010). "
    ]
   },
   {
